# MeshRepair

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  PARALLELIZATION_CHANGES_NEEDED.md  README.md  build_linux.sh  build_windows.cmd
.github/workflows/: jekyll-gh-pages.yml
addons/meshrepair_blender/: README.md  properties.py
addons/meshrepair_blender/engine/: connection.py  engine_session.py  manager.py
addons/meshrepair_blender/operators/: repair_operators.py  utility_operators.py
addons/meshrepair_blender/ui/: __init__.py  main_panel.py  subpanels.py
addons/meshrepair_blender/utils/: mesh_binary.py  mesh_export.py  mesh_import.py  mesh_utils.py
cmake/: FindCGAL.cmake  FindEigen3.cmake  FindRapidOBJ.cmake
docs/: _config.yml  blender-addon-guide.md  cli-guide.md  index.md
docs/_layouts/: default.html
docs/assets/css/: custom.css
docs/images/: IMAGE_PLACEHOLDERS.md
meshrepair/: cli_main.cpp  debug_path.cpp  engine_main.cpp  help_printer.cpp  hole_detector.cpp  hole_filler.cpp  hole_ops.cpp  local_batch_queue.cpp  logger.cpp  main.cpp  mesh_loader.cpp  mesh_merger.cpp  mesh_partitioner.cpp  mesh_preprocessor.cpp  mesh_validator.cpp  parallel_hole_filler.cpp  pipeline_ops.cpp  pipeline_processor.cpp  polygon_soup_validation.cpp  progress_reporter.cpp  submesh_extractor.cpp  submesh_ops.cpp  thread_manager.cpp  worker_pool.cpp
meshrepair-gui/: CMakeLists.txt  main.cpp  mr_gui.cpp
meshrepair-gui/icons/: icon.ai
meshrepair-gui/include/: mr_gui.h
meshrepair/engine/: command_handler.cpp  command_handler.h  engine_dispatch.cpp  engine_dispatch.h  engine_wrapper.cpp  engine_wrapper.h  mesh_binary.cpp  mesh_binary.h  protocol.cpp  protocol.h  socket_stream.cpp  socket_stream.h
meshrepair/include/: c_api.h  config.h  debug_path.h  help_printer.h  hole_detector.h  hole_filler.h  hole_ops.h  local_batch_queue.h  logger.h  mesh_loader.h  mesh_merger.h  mesh_partitioner.h  mesh_preprocessor.h  mesh_validator.h  parallel_detection.h  parallel_hole_filler.h  parallel_utils.h  pipeline_ops.h  pipeline_processor.h  polygon_soup_repair.h  polygon_soup_validation.h  progress_reporter.h  submesh_extractor.h  submesh_ops.h  thread_manager.h  thread_safe_cout.h  threadpool.h  types.h  worker_pool.h
meshrepair_blender/: INSTALL_INSTRUCTIONS.md  README.md  __init__.py  preferences.py  properties.py
meshrepair_blender/engine/: __init__.py  connection.py  engine_session.py  manager.py
meshrepair_blender/operators/: __init__.py  engine_operators.py  repair_operators.py  utility_operators.py
meshrepair_blender/ui/: main_panel.py  main_panel_ORIGINAL_BACKUP.py  subpanels.py
meshrepair_blender/utils/: __init__.py  mesh_binary.py  mesh_export.py  mesh_import.py
scripts/: package_macos.sh
tests/: CMakeLists.txt
